@@ -1,3 +1,8 @@
+2004-05-31 Sowmini Varadhan <sowmini.varadhan@sun.com>
+
+	* ripd.c: Fixup compile warnings
+	* rip_routemap.c: Ditto
+	
 2004-05-08 Paul Jakma <paul@dishone.st>
 
 	* rip_zebra.c: sync with zclient changes.
